--- a/app/assets/stylesheets/hunj-style.css
+++ b/app/assets/stylesheets/hunj-style.css
@@ -41,9 +41,9 @@ div th, div td {
 
 div#header {
     text-align: right;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 1.0);
-    height: 30px;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.95);
+    height: 25px;
     border: 1px solid #CCC;
     width: 100%;
     margin: 0px auto;
@@ -58,7 +58,25 @@ a, a hover {
 div#post_fields {
     text-align: left;
     padding: 1rem;
-
-    font-size: large;
+    font-size: 1.5rem;
     font-style: bold;
 }
+
+div#post_title {
+    min-width: 800px;
+    background-color: rgba(255, 255, 255, 0.7);
+    color: #181818;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 2rem;
+    font-style: bold;
+    text-align: center;
+    padding: 1rem;
+}
+
+p#notice {
+    font-color: magenta;
+    font-size: larger;
+    font-style: bold;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
