--- a/app/assets/stylesheets/hunj-style.css
+++ b/app/assets/stylesheets/hunj-style.css
@@ -60,6 +60,7 @@ div#post_fields {
     padding: 1rem;
     font-size: 1.5rem;
     font-style: bold;
+    line-height: 1.5rem;
 }
 
 div#post_title {
