--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,18 +3,18 @@
       <%= devise_error_messages! %>
       <p>
         <%= f.label :email %><br/>
-        <%= f.email_field :email, autofocus: true %>
+        <%= f.email_field :email, autofocus: true, required: true %>
       </p>
       <p>
         <%= f.label :password %><br/>
         <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br/>
-        <%= f.password_field :password, autocomplete: "off" %>
+        <%= f.password_field :password, autocomplete: "off", required: true %>
       </p>
       <p>
         <%= f.label :password_confirmation %><br/>
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
       </p>
       <%= f.submit "Sign up" %>
   <% end %>
