--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,12 +5,9 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, required: true %>
   </div>
-
-  <div class="actions">
+  <div class="field">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
