--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,8 @@
   <% end %>
 
   <div id="post_fields">
+    <%= f.check_box :is_request %> Requesting?<br>
+    <br>
     <%= f.label :title %><br>
     <%= f.text_field :title, style: 'width: 100%; display: block', required: true %><br>
     <%= f.label :content %><br>
