--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div id="post_title"><%= @post.title %></div>
+<div id="post_title"><%= @post.is_request ? "[Request]" : "[Offer]" %> <%= @post.title %></div>
 <div id="post_fields">
   <%= @post.content %>
   <br>
@@ -7,9 +7,9 @@
   <strong>Location:</strong>
   <%= @post.location %><br>
   <strong>Posted time:</strong>
-  <%= @post.posted_time.to_time %><br>
+  <%= @post.created_at %><br>
   <strong>Delete at:</strong>
-  <%= (@post.posted_time + @post.ttl.hours).to_time %><br>
+  <%= (@post.created_at + @post.ttl) %><br>
   </p>
 
   <p align="right">
