--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,20 @@
-<div class="login-container">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-      <p>
-        <%= f.label :email %><br/>
-        <%= f.email_field :email, autofocus: true, required: true %>
-      </p>
-      <p>
-        <%= f.label :password %><br/>
-        <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br/>
-        <%= f.password_field :password, autocomplete: "off", required: true %>
-      </p>
-      <p>
-        <%= f.label :password_confirmation %><br/>
-        <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
-      </p>
-      <%= f.submit "Sign up" %>
-  <% end %>
-</div>
+<%= javascript_include_tag('new') %>
 
+<div class="login-container">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <p>
+          <%= f.label :email %><br/>
+          <%= f.email_field :email, autofocus: true, required: true %>
+        </p>
+        <p>
+          <%= f.label :password %><br/>
+          <%= f.password_field :password, autocomplete: "off", required: true %>
+        </p>
+        <p>
+          <%= f.label :password_confirmation %><br/>
+          <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
+        </p>
+        <%= f.submit "Sign up" %>
+    <% end %>
+</div>
