--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,5 @@
-<%= javascript_include_tag('new') %>
-
 <div class="login-container">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for @user do |f| %>
         <%= devise_error_messages! %>
         <p>
           <%= f.label :email %><br/>
