fix sign-in issue

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum, include at least one lowercase letter, one uppercase letter, and one digit</em>
+      <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
