--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,10 +4,13 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, required: true %>
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
   </div>
-  <div class="field">
+
+  <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
+
+<%= render "devise/shared/links" %>
