--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,9 @@
 body {
-  background-color: #fff;
-  color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  //background-color: #fff;
+  //color: #333;
+  //font-family: verdana, arial, helvetica, sans-serif;
+  //font-size: 13px;
+  //line-height: 18px;
 }
 
 p, ol, ul, td {
@@ -42,19 +42,16 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+
 }
 
 #error_explanation {
   width: 450px;
-  border: 2px solid red;
-  padding: 7px;
+  //border: 2px solid red;
+  //padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
-
+  //background-color: #c8c8c8;
   h2 {
     text-align: left;
     font-weight: bold;
@@ -62,8 +59,8 @@ div {
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
+    background-color: rgba(192, 0, 0, 0.7);
+    color: #FFFFFF;
   }
 
   ul li {
