--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <body>
 
 <% if user_signed_in? %>
-    <div id="header">Logged in as <%= link_to @user, current_user %> | <%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></div>
+    <div id="header">Logged in as <%= link_to current_user.username, current_user %> | <%= link_to('Sign out', destroy_user_session_path, :method => :delete) %></div>
 <% end %>
 <% if !alert.nil? %>
     <div id="notice"><%= alert %></div>
