--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.is_request ? "Request" : "Offer" %></td>
+        <td><%= post.is_request ? 'Request' : 'Offer' %></td>
         <td><%= link_to post.title, post %></td>
         <td><%= post.location %></td>
         <th><%= post.created_by %></th>
