--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <div class="post_fields">
-<table width="100%">
+<table width="900">
   <caption align="top" style="font-size: 200%; font-style: bold;">Listing Posts</caption>
   <thead>
     <tr>
-      <th>Type</th>
+      <th width="60">Type</th>
       <th>Title</th>
-      <th>Location</th>
-      <th>Created by</th>
-      <th>Posted time</th>
-      <th>Delete at</th>
+      <th width="120">Location</th>
+      <th width="80">Created by</th>
+      <th width="120">Posted time</th>
+      <th width="120">Delete at</th>
     </tr>
   </thead>
 
