--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,10 +18,12 @@
     <%= f.text_field :title, style: 'width: 100%; display: block', required: true %><br>
     <%= f.label :content %><br>
     <%= f.text_area :content, style: 'width: 100%; min-height: 300px; display: block', required: true %><Br>
-    <%= f.label :location %><br>
-    <%= f.text_field :location, style: 'width: 100%; display: block', required: true %><br>
-    Time-to-live (in hours) of this post<br>
-    <%= f.number_field :ttl, style: 'width: 50px; display: block', required: true %><br>
+    <% if !@post.persisted? %>
+      <%= f.label :location %><br>
+      <%= f.text_field :location, style: 'width: 100%; display: block', required: true, :value => current_user.location %><br>
+      Time-to-live (in hours) of this post<br>
+      <%= f.number_field :ttl, style: 'width: 50px; display: block', required: true %><br>
+    <% end %>
     <%= f.submit %>
   </div>
 <% end %>
