--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,9 +4,9 @@
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
       <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @post.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
@@ -20,9 +20,11 @@
     <%= f.text_area :content, style: 'width: 100%; min-height: 300px; display: block', required: true %><Br>
     <% if !@post.persisted? %>
       <%= f.label :location %><br>
-      <%= f.text_field :location, style: 'width: 100%; display: block', required: true, :value => current_user.location %><br>
+      <%= f.text_field :location, style: 'width: 100%; display: block', required: true, :value => current_user.location %>
+      <br>
       Time-to-live (in hours) of this post<br>
       <%= f.number_field :ttl, style: 'width: 50px; display: block', required: true %><br>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
     <% end %>
     <%= f.submit %>
   </div>
