--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= post.is_request ? 'Request' : 'Offer' %></td>
         <td><%= link_to post.title, post %></td>
         <td><%= post.location %></td>
-        <th><%= post.created_by %></th>
+        <th><%= User.find(post.user_id).username %></th>
         <td><%= l post.created_at.to_time, format: :short %></td>
         <td> <%= l (post.created_at + post.ttl.hours).to_time, format: :short %></td>
         <td></td>
