--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= devise_error_messages! %>
-<div class="login-container">
+<div class="post_fields">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <p>
       <h3><%= f.label :email %></h3>
