--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,7 +20,7 @@
       <%= f.text_area :content, style: 'width: 100%; min-height: 300px; display: block', required: true %><Br>
       <% if !@post.persisted? %>
           <%= f.label :location %><br>
-          <%= f.text_field :location, style: 'width: 100%; display: block', required: true, :value => current_user.location %>
+          <%= f.text_field :location, style: 'width: 100%; display: block', required: true, value: current_user.location %>
           <br>
           Time-to-live (in hours) of this post<br>
           <%= f.number_field :ttl, style: 'width: 50px; display: block', required: true %><br>
