--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,7 @@ div {
     width: 900px;
     background-color: rgba(255, 255, 255, 0.7);
     font-family: 'Source Sans Pro', sans-serif;
+    padding: 2.5rem;
 }
 
 div th, div td {
@@ -81,6 +82,7 @@ div#notice {
     font-size: 175%;
     text-align: center;
     padding: 0.5rem;
+    margin: 1rem;
 }
 
 a, a hover {
@@ -89,11 +91,12 @@ a, a hover {
 }
 
 div#post_fields {
+    margin: 0rem;
     text-align: left;
-    padding: 1rem;
-    font-size: 1.5rem;
     font-style: bold;
-    line-height: 1.5rem;
+    line-height: 2rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 div#post_title {
@@ -101,16 +104,8 @@ div#post_title {
     background-color: rgba(255, 255, 255, 0.7);
     color: #181818;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-style: bold;
     text-align: center;
-    padding: 1rem;
-}
-
-p#notice {
-    font-color: magenta;
-    font-size: larger;
-    font-style: bold;
-    background-color: rgba(255, 255, 255, 0.3);
 }
 
