--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <div class="post_fields">
+  <h2 align="center">Listing Posts</h2>
   <table width="900">
-    <caption align="top" style="font-size: 175%; font-style: bold;">Listing Posts</caption>
     <thead>
     <tr>
       <th width="60">Type</th>
@@ -15,7 +13,7 @@
     </thead>
 
     <tbody>
-    <% @posts.each do |post| %>
+    <% @posts.reverse_each do |post| %>
         <% if Time.now > (post.created_at + post.ttl.hours).to_time %>
             <% next %>
         <% end %>
