--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,10 @@
-<% @posts = Post.all %>
+<% @posts = Post.all.select do |post| post.user_id == @user.id end %>
 <div class="post_fields">
+  <h2 align="center">Listing <%= @user.username %>'s Posts</h2>
+  <p>
+    <%= @user.username %> has been member since <%= l @user.created_at.to_date, format: :short %>.
+  </p>
   <table width="900">
-    <caption align="top" style="font-size: 200%; font-style: bold;">Listing <%= @user.username %>'s Posts</caption>
     <thead>
     <tr>
       <th width="60">Type</th>
@@ -14,10 +17,6 @@
 
     <tbody>
     <% @posts.each do |post| %>
-        <% if post.user_id != @user.id %>
-            <% next %>
-        <% end %>
-
         <tr>
           <td><%= post.is_request ? 'Request' : 'Offer' %></td>
           <td><%= link_to post.title, post %></td>
