--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,8 +4,8 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+    E-mail or Username:<br />
+    <%= f.text_field :login, autofocus: true, required: true %>
   </div>
 
   <div class="actions">
