--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
   <h3>Comments</h3>
   <p>
     <% @post.comments.each do |comment| %>
-        <% if comment.user_id == current_user.id %>
+        <% if comment.user_id == current_user.id || current_user.is_admin %>
             <%= link_to 'x', [comment.post, comment], method: :delete, data: {confirm: 'Are you sure?'} %>
         <% end %>
         <strong><%= User.find(comment.user_id).username %></strong>(<%= l comment.created_at.to_time, format: :short %>
