--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Source Sans Pro';
+}
+p, div {
+    font-family: 'Source Sans Pro';
+}
