--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,34 @@
-<h1>Showing all Users</h1>
-<div class="content">
 <% @users = User.all %>
-<% @users.each do |user| %>
-    <%= user.username %> (<%= user.email %>) <br>
-<% end %>
+<h1>Showing all Users</h1>
+
+<div class="table-hover">
+	<table class="table">
+		<thead>
+			<tr>
+				<th>#</th>
+				<th>Username</th>
+				<th>Email</th>
+				<th>Location</th>
+				<th><%= 'Admin Privilege' if current_user.is_admin %></th>
+			</tr>
+		</thead>
+		<% @users.each do |user| %>
+		<tr>
+			<td><%= user.id %></td>
+			<td><%= link_to user.username, user %></td>
+			<td><%= link_to user.email, "mailto:#{user.email}" %></td>
+			<td><%= user.location %></td>
+			<td>
+				<% if user != current_user %>
+				<% if user.is_admin %>
+				<%= link_to 'demote', { :controller => 'users', :action => 'demote', :id => user.id }, data: { confirm: 'Do you really want to revoke ' + user.username + '\'s admin privileges?' } %>
+				<% else %>
+				<%= link_to 'promote', { :controller => 'users', :action => 'promote', :id => user.id, }, data: { confirm: 'Do you really want to give ' + user.username + ' admin privileges?' } %>
+				<% end %>
+				<% end %>
+			</td>
+		</tr>
+		<br>
+		<% end %>
+	</table>
 </div>
