recaptcha is implemented but it is formatted badly in html, and it always occurs
Signed-off-by: Matthew Roseman <mroseman95@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       </div>
 <% end %>
 <% if !alert.nil? %>
-    <div id="notice"><%= alert %></div>
+    <div id="alert"><%= alert %></div>
 <% end %>
 <% if !notice.nil? %>
     <div id="notice"><%= notice %></div>
