--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,27 +28,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><i class="fa fa-cutlery" aria-hidden="true"></i> <%= link_to "Ingredient Sharer", posts_path, :class => "navbar-brand" %></a>
+        <a class="navbar-brand" href="/"><i class="fa fa-cutlery" aria-hidden="true"></i> Ingredient Sharer</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><%= link_to "About", about_index_path %></li>
-        <!--
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      -->
     </ul>
     <% if user_signed_in? %>
     <form class="navbar-form navbar-right">
@@ -70,7 +56,6 @@
         <ul class="dropdown-menu">
           <li><%= link_to 'My Posts', current_user %></li>
           <li><%= link_to 'Change Information', edit_user_registration_path %></li>
-          <li><a href="#">Something else here</a></li>
           <li role="separator" class="divider"></li>
           <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
         </ul>
