--- a/app/views/posts/_captcha_form.html.erb
+++ b/app/views/posts/_captcha_form.html.erb
@@ -32,6 +32,7 @@
           <%= f.hidden_field :user_id, :value => current_user.id %>
 
       <% end %>
+      <%= recaptcha_tags %>
       <%= f.submit %>
     </div>
 <% end %>
