--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-<div id="post_fields">
   <h2 align="center">
     <%= @post.is_request ? "[Request]" : "[Offer]" %>
     <% if @post.comments.count > 1 %>
@@ -7,7 +6,7 @@
         <%= @post.title %>
     <% end %>
   </h2>
-  <p>
+  <h3>
     <strong>Location:</strong>
     <%= @post.location %><br>
     <strong>Created by:</strong>
@@ -16,12 +15,15 @@
     <%= l @post.created_at.to_time, format: :short %><br>
     <strong>Delete at:</strong>
     <%= l (@post.created_at + @post.ttl.hours).to_time, format: :short %><br>
-  </p>
+  </h3>
   <p>
-    <%= @post.content %>
+    <%= simple_format @post.content %>
   </p>
   <h3>Comments</h3>
   <p>
+    <% if @post.comments.empty? %>
+      No comments yet. Perhaps you should write one!
+    <% end %>
     <% @post.comments.each do |comment| %>
         <% if comment.user_id == current_user.id || current_user.is_admin %>
             <%= link_to 'x', [comment.post, comment], method: :delete, data: {confirm: 'Are you sure?'} %>
@@ -31,8 +33,8 @@
     <h3>Add a comment:</h3>
     <%= form_for([@post, @post.comments.build]) do |f| %>
         <%= f.hidden_field :user_id, :value => current_user.id %>
-         <%= f.text_area :content, style: 'width: 750px; resize: vertical' %>
-            <%= f.submit %>
+        <%= f.text_area :content, style: 'width: 750px; resize: vertical' %>
+        <%= f.submit %>
     <% end %>
     </p>
 
@@ -43,4 +45,3 @@
       <%= link_to 'Back', posts_path %>
     </p>
 
-    </div>
